fix:change gap in style.css

--- a/style.css
+++ b/style.css
@@ -38,7 +38,7 @@ html {
   display: flex;
   justify-content: space-evenly;
   flex-wrap: wrap;
-  gap: ;
+  gap: 5px;
   font-size: 1.125rem;
   max-width: 1440px;
   margin: 0 auto;
